【代码优化】增强 JDK17、JDK8 之间的兼容性